--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "@types/node": "24.0.3",
         "@types/react": "19.1.8",
         "@types/react-dom": "19.1.6",
+        "@typescript-eslint/eslint-plugin": "8.34.1",
+        "@typescript-eslint/parser": "8.34.1",
         "@vitejs/plugin-react": "4.5.2",
         "autoprefixer": "10.4.21",
         "esbuild-plugin-react-virtualized": "1.0.5",
