Added production preview

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -22,10 +22,15 @@ tasks:
     cmds:
       - pnpm build
 
+  preview:
+    desc: "Preview the production build"
+    cmds:
+      - pnpm preview
+
   typecheck:
     desc: "Run full type checking using tsconfig.typecheck.json"
     cmds:
-      - tsc --noEmit -p tsconfig.typecheck.json
+      - pnpm typecheck
 
   lint:
     desc: "Run ESLint across the codebase"
