--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "preview": "vite preview",
+        "preview": "vite build && vite preview",
         "typecheck": "tsc --noEmit -p tsconfig.typecheck.json",
         "lint": "eslint . --ext .ts,.tsx",
         "format": "prettier --write ."
