--- a/package.json
+++ b/package.json
@@ -12,6 +12,14 @@
         "format": "prettier --write ."
     },
     "devDependencies": {
+        "@storybook/addon-a11y": "9.0.11",
+        "@storybook/addon-essentials": "8.6.14",
+        "@storybook/addon-interactions": "8.6.14",
+        "@storybook/addon-links": "9.0.11",
+        "@storybook/builder-vite": "9.0.11",
+        "@storybook/react": "9.0.11",
+        "@storybook/react-vite": "9.0.11",
+        "@storybook/testing-library": "0.2.2",
         "@tailwindcss/forms": "0.5.10",
         "@tailwindcss/postcss": "4.1.10",
         "@tailwindcss/typography": "0.5.16",
