--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     },
     "dependencies": {
         "@reduxjs/toolkit": "2.8.2",
+        "@tanstack/react-query": "5.80.7",
         "@tanstack/react-router": "1.121.21",
         "@tanstack/react-router-devtools": "1.121.21",
         "axios": "1.10.0",
@@ -81,6 +82,7 @@
         "react-intl": "7.1.11",
         "react-markdown": "10.1.0",
         "react-oidc-context": "3.3.0",
+        "react-query": "3.39.3",
         "react-redux": "9.2.0",
         "react-router-dom": "7.6.2",
         "react-virtualized": "9.22.6",
