--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
         "build": "vite build",
         "preview": "vite build && vite preview",
         "typecheck": "tsc --noEmit -p tsconfig.typecheck.json",
-        "lint": "eslint . --ext .ts,.tsx",
+        "lint": "eslint . --config eslint.config.mjs --ext .ts,.tsx",
         "format": "prettier --write ."
     },
     "devDependencies": {
+        "@eslint/js": "9.29.0",
         "@storybook/addon-a11y": "9.0.11",
         "@storybook/addon-essentials": "8.6.14",
         "@storybook/addon-interactions": "8.6.14",
@@ -20,6 +21,7 @@
         "@storybook/react": "9.0.11",
         "@storybook/react-vite": "9.0.11",
         "@storybook/testing-library": "0.2.2",
+        "@tailwindcss/aspect-ratio": "0.4.2",
         "@tailwindcss/forms": "0.5.10",
         "@tailwindcss/postcss": "4.1.10",
         "@tailwindcss/typography": "0.5.16",
