--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,5 +1,21 @@
 {
     "$schema": "https://json.schemastore.org/tsconfig",
     "extends": "./tsconfig.base.json",
-    "include": ["src", "vite.config.ts", "vitest.config.ts"]
+    "include": [
+        "src",
+        "vite.config.ts",
+        "tailwind.config.ts",
+        "vitest.config.ts"
+    ],
+    "exclude": [
+        "node_modules",
+        "dist",
+        "coverage",
+        ".cache",
+        ".vscode",
+        ".vscode/.history"
+    ],
+    "compilerOptions": {
+        "types": ["vitest"]
+    }
 }
